style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Noto Sans KR", sans-serif;
  display: flex;
  flex-direction: column;
  max-height: 100vh;
}

.time-s1 {
  display: none;
}

.line-s1 {
  display: none;
}

.filter {
  display: none;
  position: absolute;
  background-color: black;
  opacity: 0.5;
  width: 99vw;
  height: 99vh;
  top: 1%;
  right: 1%;
  border-radius: 10px;
  z-index: 10;
}

.load-text {
  font-size: 60px;
  color: white;
}

.load {
  display: flex;
  margin-left: 35%;
  margin-top: 20%;
}

#fountainG {
  margin: 0;
  margin-top: 55px;
}

.container-s1 {
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  width: 1200px;
}

.city-name-error {
  color: #ff8c00;
  font-size: 13px;
  font-weight: bold;
  position: absolute;
  margin-left: 108px;
  margin-top: 8px;
}

.inp {
  color: rgb(58, 58, 58);
  background: #f3f3fb;
  border-radius: 10px 0px 0px 10px;
  border: blanchedalmond;
  width: 200px;
  height: 30px;
  padding-left: 8px;
  margin-right: -2px;
  padding-right: 5px;
}

.btn-get {
  position: absolute;
  cursor: pointer;
  background: #f3f3fb;
  border-radius: 0px 10px 10px 0;
  border: blanchedalmond;
  width: 50px;
  height: 30px;
  box-shadow: inset 1px 0px 0px rgb(157, 156, 156);
}

.left-wr1 {
  display: flex;
  flex-direction: column;
  margin: auto auto;
  margin-right: 230px;
}

.section-1 {
  background: linear-gradient(to top, #88e0e0, #aeebeb);
  height: 454px;
}

#icon {
  height: 450px;
  width: 450px;
  margin-right: 150px;
}

.place {
  display: flex;
  color: #f3f3fb;
  font-weight: bold;
  font-size: 60px;
}

.weather {
  font-size: 40px;
  font-weight: 600;
  color: #ffffff;
}

.section-2 {
  height: 500px;
  background: linear-gradient(#edf327, #dff431);
}

.container-s2 {
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  width: 1200px;
  color: #333333;
}

.temp {
  font-size: 200px;
  font-weight: bold;
  margin-top: 30px;
}

.btns {
  display: flex;
  margin-top: 50px;
  margin-bottom: -30px;
}

.left-wr2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 555px;
}

.line {
  background-color: #7eded6;
  height: 3px;
  width: 500px;
  border: none;
}

.cels,
.fahr {
  background: none;
  border: none;
  cursor: pointer;
  font-size: 30px;
}

.right-wr2 {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.details-title {
  font-size: 50px;
  font-weight: bold;
  margin-top: 20px;
}

.details {
  display: flex;
  flex-direction: column;
  font-size: 40px;
  margin-bottom: 30px;
}

.feel {
  display: flex;
}

.feels-like {
  margin-right: 50px;
}

.feel-value {
  font-weight: bold;
}

.wind-text {
  margin-right: 125px;
}

.wind-value {
  font-weight: bold;
}

.hum {
  margin-right: 52px;
}

.hum-value {
  font-weight: bold;
}

.press {
  margin-right: 62px;
}

.press-value {
  font-weight: bold;
}

.wind {
  display: flex;
}

.humidity {
  display: flex;
}

.pressure {
  display: flex;
}

.item {
  margin: 5px 0;
}

.section-3 {
  height: 86px;

  background: linear-gradient(to top, #66d8d8, #9ee5e5);
}

.container-s3 {
  margin: 0 auto;
  width: 1200px;
  color: #333333;
}

.time {
  margin-right: 150px;
  margin-top: 10px;
  color: #ffffff;
  font-size: 30px;
  font-weight: bold;
  text-align: right;
}

.country {
  margin-left: 20px;
}

@media (max-width: 1200px) {
  #icon {
    height: 450px;
    width: 500px;
    margin-right: 50px;
    margin-left: -150px;
  }

  .temp {
    font-size: 150px;
  }

  .container-s1 {
    width: 1000px;
  }

  .container-s2 {
    width: 1000px;
  }

  .container-s3 {
    width: 1000px;
  }
}

@media (max-width: 1000px) {
  .right-wr2 {
    margin-top: 30px;
  }

  .container-s1 {
    width: 900px;
  }

  .container-s2 {
    width: 900px;
  }

  .container-s3 {
    width: 900px;
  }

  .details {
    font-size: 30px;
  }

  .line {
    width: 350px;
  }

  #icon {
    width: 400px;
    height: 400px;
    margin-right: 40px;
  }

  .time {
    margin-right: 60px;
  }

  .wind-value {
    margin-left: -18px;
  }
}

@media (max-width: 900px) {
  .line {
    width: 300px;
  }

  .time {
    margin-right: 150px;
  }

  #icon {
    width: 200px;
    height: 200px;
  }

  .container-s1 {
    width: 750px;
    margin-top: 70px;
    margin-left: -100px;
  }

  .container-s2 {
    width: 750px;
  }

  .container-s3 {
    width: 750px;
  }

  .icon {
    width: 1px;
  }

  .temp {
    font-size: 120px;
  }

  .feel-value {
    font-size: 25px;
  }

  .wind-value {
    font-size: 25px;
  }

  .hum-value {
    font-size: 25px;
  }

  .press-value {
    font-size: 25px;
  }
}

@media (max-width: 750px) {
  .load {
    margin-left: 25%;
  }

  .weather {
    margin-left: -50px;
  }

  .inp {
    margin-left: -50px;
    margin-bottom: 3px;
  }

  .left-wr1 {
    text-align: center;
  }

  .country {
    margin: auto 0;
    margin-left: 20px;
  }

  .comma {
    margin: auto 0;
  }

  .temp {
    font-size: 70px;
    margin-top: 50px;
  }

  .details-title {
    font-size: 30px;
  }

  .details {
    font-size: 20px;
  }

  .wind-value {
    margin-left: -37px;
  }

  .line {
    width: 220px;
  }

  .press-value {
    margin-left: -7px;
  }

  .right-wr2 {
    margin-top: 50px;
    margin-left: -100px;
  }

  .left-wr2 {
    margin-left: -100px;
    margin-top: 50px;
  }

  .city,
  .comma,
  .country {
    font-size: 40px !important;
  }

  .weather {
    font-size: 30px;
  }

  .time {
    font-size: 20px;
  }

  .container-s1,
  .container-s2,
  .container-s3 {
    width: 600px;
  }

  .container-s1 {
    margin-left: 0;
  }

  .city-name-error {
    margin-left: 100px;
  }
}

@media (max-width: 700px) {
  .container-s1 {
    width: 500px;
    margin-left: 50px;
  }

  .city-name-error {
    margin-left: 100px;
  }
}
/* ... */

